--- a/.circleci/cicleci.yml
+++ b/.circleci/cicleci.yml
@@ -1,18 +1,34 @@
 version: 2.1
 
-commands:
-  print_pipeline_id:
-    steps:
-      - run: echo ${CIRCLE_WORKFLOW_ID}
-
 jobs:
-  my_job:
+  build:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id
+      - checkout
+      - run: npm i
+      - run: npm run lint
+  test:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run: npm i
+      - run: npm run test
+  analyze:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run: npm audit
 
 workflows:
   my_workflow:
     jobs:
-      - my_job
+      - build
+      - test:
+          requires:
+            - build
+      - analyze:
+          requires:
+            - test
